k8s/apps/echo-prober-istio-v123/overlays/echo-v3/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: n1
  labels:
    istio-injection: enabled
