k8s/apps/echo-prober-istio-v123/overlays/echo-v3/vs-dr.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: echo
spec:
  hosts:
  - echo.echo-v3.svc.cluster.local
  http:
  - route:
    - destination:
        host: echo.echo-v3.svc.cluster.local
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: echo
spec:
  host: echo.echo-v3.svc.cluster.local
